--- a/TeamProject/Areas/Admin/Views/Users/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Create.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<h2>Sign Up</h2>
+<h2>Create New User</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
