--- a/TeamProject/Views/Courts/Book.cshtml
+++ b/TeamProject/Views/Courts/Book.cshtml
@@ -35,18 +35,18 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Confirm Booking</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Title</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Please Confirm Booking Info</p>
-                        <p></p>
+                        Body
                     </div>
                     <div class="modal-footer">
-                        <button id="cancel-booking" type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button id="confirm-booking" type="button" class="btn btn-primary">Confirm</button>
+                        <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary confirm-button" id="confirm-booking">Confirm</button>
+                        <button type="button" class="btn btn-primary ok-button" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     // return div with week days timeslots body
                     getTimeslotsBody: function (data) {
                         let tbody = '';
-                        let date = timeslotDate.firstWeekDate();//.hour(0).minute(0).second(0);
+                        let date = timeslotDate.firstWeekDate();
 
                         data.map(function (timeslot) {
                             let localhour = moment(timeslot.Hour,'HH:mm');
@@ -164,18 +164,25 @@
             }
 
             function openModalConfirmation(dateTime, courtName) {
-                $('#exampleModalLabel').text('Confirm Booking');
-                $('cancel-booking').show();
-                $('#confirm-booking').text('Confirm');
-                $('#confirm-modal .modal-body p:nth-child(2)').html('<h4>' + dateTime + '<small class="text-muted"> at ' + courtName + '</small></h4>');
-                $('#confirm-modal').modal('show');
+                openModal({
+                    title: 'Please Confirm Booking Info',
+                    body: '<h4>' + dateTime + '<small class="text-muted"> at ' + courtName + '</small></h4>',
+                    buttons: ['cancel','confirm']
+                });
+            }
+            function openModalWithError(title, message) {
+                openModal({
+                    title: title,
+                    body: message,
+                    buttons: ['ok']
+                });
             }
 
-            function openModalWithError(error) {
-                $('#exampleModalLabel').text('Unable to Book');
-                $('cancel-booking').hide();
-                $('#confirm-booking').text('Ok');
-                $('#confirm-modal .modal-body').html(error);
+            function openModal(options) {
+                $('#confirm-modal .modal-title').text(options.title);
+                $('#confirm-modal .modal-body').html(options.body);
+                $('#confirm-modal .modal-footer button').hide();
+                options.buttons.map(b => $('#confirm-modal .' + b + '-button').show());
                 $('#confirm-modal').modal('show');
             }
 
@@ -196,8 +203,8 @@
                         } else {
                             // TODO
                             // Open Modal with Error message
-                            openModalWithError('<h3>Unable to Book selected Timeslot<h3><p>Please try again</p>');
                             refreshTimeslotsTable();
+                            openModalWithError('Unable to Book','<h4>Unable to Book selected Timeslot<h4><p>Please try again</p>');
                         }
                     }
                 });
@@ -217,38 +224,43 @@
 
             // Datetime Manager for Timeslot table
             function TimeslotDate(onDateChange) {
-                const $weekPeriodTitle = $('#timeslot-week');
+                const $weekPeriodTitle = $('#timeslot-week'),
+                    currentDate = moment(new Date()).hour(0).minute(0).second(0),
+                    startDate = currentDate.clone();
 
                 const that = {
-                    currentDate: moment(new Date()).hour(0).minute(0).second(0),
-                    firstWeekDay: function () {
-                        return that.firstWeekDate().date();
-                    },
                     // calculates and returns weeks start date based on current date
                     firstWeekDate: function () {
-                        const day = that.currentDate.day(),
+                        const day = currentDate.day(),
                             diff = (day == 0 ? -6 : 1) - day;
-                        return moment(that.currentDate)
+                        return moment(currentDate)
                             .add(diff, 'days');
                     },
                     lastWeekDate: function () {
                         return that.firstWeekDate()
                             .add(6, 'days');
                     },
+                    goNextWeek: function () {
+                        currentDate.add(7, 'days');
+                        that.updatePeriod();
+                    },
+                    goPrevWeek: function () {
+                        if (currentDate.isAfter(startDate)) {
+                            currentDate.subtract(7, 'days');
+                            that.updatePeriod();
+                        } else {
+                            openModalWithError('Can not navigate to previous Date',
+                                '<h4>Booking is not allowed before <small class="text-muted">' + startDate.format('DD/MM/YYYY') + '</small></h4>')
+                        }
+                        
+                        
+                    },
                     updatePeriod: function () {
                         let date = that.firstWeekDate();
                         $weekPeriodTitle.text(
                             date.format("DD/MM/YYYY") + ' - ' +
-                            date.add(6,'days').format("DD/MM/YYYY"));
+                            date.add(6, 'days').format("DD/MM/YYYY"));
                         onDateChange();
-                    },
-                    goNextWeek: function () {
-                        that.currentDate.add(7, 'days');
-                        that.updatePeriod();
-                    },
-                    goPrevWeek: function () {
-                        that.currentDate.subtract(7, 'days');
-                        that.updatePeriod();
                     }
                 }
                 return that;
