Changed Base Added BookKey and created a confirmed view in Court/Booking

--- a/TeamProject/Views/Courts/Book.cshtml
+++ b/TeamProject/Views/Courts/Book.cshtml
@@ -192,7 +192,8 @@
                         if (result.Status === "Ok") {
                             // TODO
                             // Redirect to Booking Information and Send email
-                            window.location.href = '/Admin/Bookings/Details/'+result.BookingId;
+                            
+                            window.location.href = '/Courts/Confirmed/'+result.BookKey;
                         } else {
                             // TODO
                             // Open Modal with Error message
