changed layout for join view

--- a/TeamProject/Areas/Admin/Views/Users/Join.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Join.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TeamProject.Models.User
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Join</h2>
 @using (Html.BeginForm())
