--- a/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
@@ -68,7 +68,7 @@
             @Html.ActionLink("Details", "Details", new { id = item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
             @Html.ActionLink("Courts", "Index", "courts", new { id = item.Id }, null) |
-            @Html.ActionLink("Facilities", "ChooseFacilities", "Facilities", new { id = item.Id },null)
+            @Html.ActionLink("Facilities", "ChooseFacilities", "BranchFacilities", new { id = item.Id },null)
         </td>
     </tr>
 }
