--- a/TeamProject/Views/Courts/Book.cshtml
+++ b/TeamProject/Views/Courts/Book.cshtml
@@ -140,6 +140,7 @@
                     toDate = timeslotDate.lastWeekDate();
                 
                 $.getJSON('/api/book/' + courtId, {
+                    type: 'ForBooking',
                     fromDate: fromDate.clone().utc().format(),
                     toDate: toDate.utc().format()
                 }).done(function (data) {
