--- a/TeamProject/Views/Courts/Book.cshtml
+++ b/TeamProject/Views/Courts/Book.cshtml
@@ -13,7 +13,7 @@
 <div class="row">
 
     <nav class="col-2 sidenav">
-        <ul class="list-group">
+        <ul class="list-group shadow-sm">
             @foreach (var court in Model.Courts)
             {
                 <li court-id="@court.Id" class="list-group-item d-flex justify-content-between align-items-center">@court.Name</li>
@@ -22,7 +22,7 @@
     </nav>
 
     <main class="col-10">
-        <h1 class="bd-title">Book for <span id="court-title"></span></h1>
+        <h1 class="bd-title">Book for <small class="text-muted" id="court-title"></small></h1>
         <div class="row timeslot-header">
             <div id="prev-week-btn" class="col-1"><i class="fas fa-arrow-circle-left"></i></div>
             <h3 id="timeslot-week" class="col text-lg-center">...</h3>
