--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -101,7 +101,7 @@
             @Html.DisplayFor(modelItem => item.Hour)
         </td>
         <td>
-            @Html.ActionLink($"{item.Day1}", "Edit", "Timeslots", new { id = item.Day1 }, new { @class})            
+            @Html.ActionLink($"{item.Day1}", "Edit", "Timeslots", new { id = item.Day1 }, null)            
         </td>
         <td>            
             @Html.ActionLink($"{item.Day2}", "Edit", "Timeslots", new { id = item.Day2 }, null)
