minor view fixes

--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -110,37 +110,37 @@
         <td>
             @if (item.Day2 != null)
             {
-                @Html.ActionLink(item.Day2.ToString(), "Edit", "Timeslots", new { id = item.Day2 }, null)
+                @Html.ActionLink(item.Day2.ToString(), "Edit", "Timeslots", new { id = item.Day2 }, new { @class = "btn btn-primary" })
             }
         </td>
         <td>
             @if (item.Day3 != null)
             {
-                @Html.ActionLink(item.Day3.ToString(), "Edit", "Timeslots", new { id = item.Day3 }, null)
+                @Html.ActionLink(item.Day3.ToString(), "Edit", "Timeslots", new { id = item.Day3 }, new { @class = "btn btn-primary" })
             }
         </td>
         <td>
             @if (item.Day4 != null)
             {
-                @Html.ActionLink(item.Day4.ToString(), "Edit", "Timeslots", new { id = item.Day4 }, null)
+                @Html.ActionLink(item.Day4.ToString(), "Edit", "Timeslots", new { id = item.Day4 }, new { @class = "btn btn-primary" })
             }
         </td>
         <td>
             @if (item.Day5 != null)
             {
-                @Html.ActionLink(item.Day5.ToString(), "Edit", "Timeslots", new { id = item.Day5 }, null)
+                @Html.ActionLink(item.Day5.ToString(), "Edit", "Timeslots", new { id = item.Day5 }, new { @class = "btn btn-primary" })
             }
         </td>
         <td>
             @if (item.Day6 != null)
             {
-                @Html.ActionLink(item.Day6.ToString(), "Edit", "Timeslots", new { id = item.Day6 }, null)
+                @Html.ActionLink(item.Day6.ToString(), "Edit", "Timeslots", new { id = item.Day6 }, new { @class = "btn btn-primary" })
             }
         </td>
         <td>
             @if (item.Day7 != null)
             {
-                @Html.ActionLink(item.Day7.ToString(), "Edit", "Timeslots", new { id = item.Day7 }, null)
+                @Html.ActionLink(item.Day7.ToString(), "Edit", "Timeslots", new { id = item.Day7 }, new { @class = "btn btn-primary" })
             }
         </td>
     </tr>
